Prevent truncation of links page

--- a/src/public/styles/landingpage.css
+++ b/src/public/styles/landingpage.css
@@ -166,6 +166,7 @@ body .darkblue {
   flex-direction: column;
   align-items: flex-start;
   flex-shrink: 0;
+  padding-bottom: 6rem;
 }
 
 
